tests/valid/SetComprehension_Valid_2.whiley
void main([string] args):
     xs = { 1,2,3,4 }
     ys = { 1,2 }
     zs = { x+y | x∈xs, y∈ys, x!=y }
     println(str(xs))
     println(str(ys))
     println(str(zs))
